--- a/packages.bib
+++ b/packages.bib
@@ -68,6 +68,7 @@ https://github.com/tidyverse/lubridate},
   url = {https://purrr.tidyverse.org/},
 }
 
+
 @Manual{R-readr,
   title = {readr: Read Rectangular Text Data},
   author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
@@ -83,6 +84,14 @@ https://github.com/tidyverse/lubridate},
   note = {R package version 2.26, 
 https://pkgs.rstudio.com/rmarkdown/},
   url = {https://github.com/rstudio/rmarkdown},
+}
+
+@Manual{R-shiny,
+  title = {shiny: Web Application Framework for R},
+  author = {Winston Chang and Joe Cheng and JJ Allaire and Carson Sievert and Barret Schloerke and Yihui Xie and Jeff Allen and Jonathan McPherson and Alan Dipert and Barbara Borges},
+  year = {2023},
+  note = {R package version 1.8.0},
+  url = {https://shiny.posit.co/},
 }
 
 @Manual{R-stringr,
@@ -117,6 +126,14 @@ https://github.com/tidyverse/stringr},
   note = {R package version 2.0.0, 
 https://github.com/tidyverse/tidyverse},
   url = {https://tidyverse.tidyverse.org},
+}
+
+@Manual{R-tufte,
+  title = {tufte: Tufte's Styles for R Markdown Documents},
+  author = {Yihui Xie and JJ Allaire},
+  year = {2023},
+  note = {R package version 0.13},
+  url = {https://github.com/rstudio/tufte},
 }
 
 @Book{bookdown2016,
